# python-code-quality-assurance

./: .gitignore  .pre-commit-config.yaml  Taskfile.yml  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: annual_health_check.yml  ci.yml
mypkg/: __init__.py  math_ops.py
tests/: conftest.py  test_math_ops.py
